# telegram-photo-bot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-07-15-maccam-bot-design.md  2026-07-15-maccam-bot-implementation.md
src/maccam_bot/: __init__.py  __main__.py  auth.py  bot.py  capture.py  config.py
tests/: test_auth.py  test_bot.py  test_capture.py  test_config.py  test_main.py
